--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 80da31d
-	trimbase = 
+	trim = scipoptsuite
+	base = 5d427cf
+	trimbase = 80da31d
 	parent = upstream
 	previous = e520062
