--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 9b31106
-	trimbase = 
+	trim = scheduler
+	base = 3c15380
+	trimbase = 9b31106
 	parent = upstream
 	previous = e520062
