--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3c15380
+	base = 0a57197
 	trimbase = 
 	parent = release/hydro/scheduler
-	previous = 
+	previous = 3c15380
