--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a84454b
+	base = ad18b55
 	trimbase = 
 	parent = debian/hydro/scheduler
-	previous = 
+	previous = a84454b
