--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8fef9c5
+	base = 73c3165
 	trimbase = 
 	parent = release/hydro/strands_executive_msgs
-	previous = 
+	previous = 8fef9c5
