--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2b01f60
+	base = 315571f
 	trimbase = 
 	parent = debian/hydro/strands_executive_msgs
-	previous = 
+	previous = 2b01f60
