--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5d427cf
+	base = 3b8da24
 	trimbase = 
 	parent = release/hydro/scipoptsuite
-	previous = 
+	previous = 5d427cf
