--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d6ed699
+	base = 921d13e
 	trimbase = 
 	parent = debian/hydro/scipoptsuite
-	previous = 
+	previous = d6ed699
