--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7f79ee1
+	base = a79c7da
 	trimbase = 
 	parent = rpm/hydro/scheduler
-	previous = 
+	previous = 7f79ee1
