--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2269ed9
+	base = 9647513
 	trimbase = 
 	parent = rpm/hydro/strands_executive_msgs
-	previous = 
+	previous = 2269ed9
