--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 47761e2
+	base = f1bdea0
 	trimbase = 
 	parent = rpm/hydro/scipoptsuite
-	previous = 
+	previous = 47761e2
