--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
 	base = 8fef9c5
-	trimbase = d721162
+	trimbase = 
 	parent = upstream
 	previous = e520062
