--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
-	base = d540bad
-	trimbase = 
+	base = b57fcea
+	trimbase = d540bad
 	parent = upstream
 	previous = e520062
