--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = b2f0674
-	trimbase = 
+	base = d414dc3
+	trimbase = b2f0674
 	parent = upstream
 	previous = e520062
