--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = e6e854e
-	trimbase = 
+	base = c044628
+	trimbase = e6e854e
 	parent = upstream
 	previous = e520062
