--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
-	base = d7a5dc8
-	trimbase = 
+	base = 4528af7
+	trimbase = d7a5dc8
 	parent = upstream
 	previous = e520062
