--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = 057f248
-	trimbase = 
+	base = d494d38
+	trimbase = 057f248
 	parent = upstream
 	previous = e520062
