--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = 185c7b9
-	trimbase = 
+	base = 29d815a
+	trimbase = 185c7b9
 	parent = upstream
 	previous = e520062
