--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
-	base = 7bb4450
-	trimbase = 
+	base = 5292e6e
+	trimbase = 7bb4450
 	parent = upstream
 	previous = 1a6bf4f
