--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
 	base = 4528af7
-	trimbase = d7a5dc8
+	trimbase = 
 	parent = upstream
 	previous = e520062
