--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = 79b9d8c
-	trimbase = 
+	base = 1943a65
+	trimbase = 79b9d8c
 	parent = upstream
 	previous = 1a6bf4f
