--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = 3b67b3b
-	trimbase = 
+	base = c8165d5
+	trimbase = 3b67b3b
 	parent = upstream
 	previous = 1a6bf4f
