Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.1-1": ["Fri Oct 24 2014", "Nick Hawes", "n.a.hawes@cs.bham.ac.uk"], "0.0.1-0": ["Fri Oct 24 2014", "Nick Hawes", "n.a.hawes@cs.bham.ac.uk"], "0.0.1-2": ["Wed Oct 29 2014", "Nick Hawes", "n.a.hawes@cs.bham.ac.uk"]}
+{"0.0.3-0": ["Wed Oct 29 2014", "Nick Hawes", "n.a.hawes@cs.bham.ac.uk"], "0.0.1-1": ["Fri Oct 24 2014", "Nick Hawes", "n.a.hawes@cs.bham.ac.uk"], "0.0.1-0": ["Fri Oct 24 2014", "Nick Hawes", "n.a.hawes@cs.bham.ac.uk"], "0.0.1-2": ["Wed Oct 29 2014", "Nick Hawes", "n.a.hawes@cs.bham.ac.uk"]}
