--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 51f0e49
-	trimbase = 
+	trim = scipoptsuite
+	base = fe3f90e
+	trimbase = 51f0e49
 	parent = upstream
 	previous = 1a6bf4f
