--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = bb49ddf
-	trimbase = 
+	trim = scheduler
+	base = dd8949f
+	trimbase = bb49ddf
 	parent = upstream
 	previous = 1a6bf4f
