--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 81bc058
+	base = adea32f
 	trimbase = 
 	parent = release/indigo/strands_executive_msgs
-	previous = 
+	previous = 81bc058
