--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0be2ce7
+	base = 0a1191f
 	trimbase = 
 	parent = debian/indigo/strands_executive_msgs
-	previous = 
+	previous = 0be2ce7
