--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b402bb7
+	base = b113e3e
 	trimbase = 
 	parent = debian/indigo/scipoptsuite
-	previous = 
+	previous = b402bb7
