--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cc08fb1
+	base = 3b78af3
 	trimbase = 
 	parent = debian/indigo/scheduler
-	previous = 
+	previous = cc08fb1
