--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8d86fed
+	base = 35598bd
 	trimbase = 
 	parent = rpm/indigo/strands_executive_msgs
-	previous = 
+	previous = 8d86fed
