--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fe3f90e
+	base = fc160cb
 	trimbase = 
 	parent = release/indigo/scipoptsuite
-	previous = 
+	previous = fe3f90e
