--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b907b66
+	base = 5fb7bc5
 	trimbase = 
 	parent = rpm/indigo/scipoptsuite
-	previous = 
+	previous = b907b66
