--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dd8949f
+	base = c7c060f
 	trimbase = 
 	parent = release/indigo/scheduler
-	previous = 
+	previous = dd8949f
