--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f13c0e6
+	base = 39652f3
 	trimbase = 
 	parent = rpm/indigo/scheduler
-	previous = 
+	previous = f13c0e6
