--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
 	base = 81bc058
-	trimbase = e3151f8
+	trimbase = 
 	parent = upstream
 	previous = 1a6bf4f
