--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
-	base = 09c287b
-	trimbase = 
+	base = d5873f0
+	trimbase = 09c287b
 	parent = upstream
 	previous = 6a70633
