--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = d9286fd
-	trimbase = 
+	base = 88f3d6c
+	trimbase = d9286fd
 	parent = upstream
 	previous = 6a70633
