--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = 8b7927c
-	trimbase = 
+	base = 49ab3f3
+	trimbase = 8b7927c
 	parent = upstream
 	previous = 6a70633
