--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
-	base = b683821
-	trimbase = 
+	base = 070d1e5
+	trimbase = b683821
 	parent = upstream
 	previous = 6a70633
