--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = 7fb4e4f
-	trimbase = 
+	base = d5a3562
+	trimbase = 7fb4e4f
 	parent = upstream
 	previous = 6a70633
