--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = 077801b
-	trimbase = 
+	base = def1e94
+	trimbase = 077801b
 	parent = upstream
 	previous = 6a70633
