--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 462887e
-	trimbase = 
+	trim = task_executor
+	base = 8f5242b
+	trimbase = 462887e
 	parent = upstream
 	previous = 8e448a6
