--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
 	base = d5873f0
-	trimbase = 09c287b
+	trimbase = 
 	parent = upstream
 	previous = 6a70633
