--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = d5b66e4
-	trimbase = 
+	base = 1da41f6
+	trimbase = d5b66e4
 	parent = upstream
 	previous = 8e448a6
