--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = 5145de6
-	trimbase = 
+	base = 02fbcfd
+	trimbase = 5145de6
 	parent = upstream
 	previous = 8e448a6
