--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8f5242b
+	base = 04d6a40
 	trimbase = 
 	parent = release/indigo/task_executor
-	previous = 
+	previous = 8f5242b
