--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 944a128
+	base = 0f0e16f
 	trimbase = 
 	parent = debian/indigo/task_executor
-	previous = 
+	previous = 944a128
