--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 554df0d
-	trimbase = 
+	trim = task_executor
+	base = 48fd8b5
+	trimbase = 554df0d
 	parent = upstream
 	previous = 8e448a6
