--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
 	base = 070d1e5
-	trimbase = b683821
+	trimbase = 
 	parent = upstream
 	previous = 6a70633
