--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = e89f0db
-	trimbase = 
+	base = a55b412
+	trimbase = e89f0db
 	parent = upstream
 	previous = 8e448a6
