--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = 1ed08a6
-	trimbase = 
+	base = 198732f
+	trimbase = 1ed08a6
 	parent = upstream
 	previous = 8e448a6
