--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 48fd8b5
+	base = 2991e2b
 	trimbase = 
 	parent = release/hydro/task_executor
-	previous = 
+	previous = 48fd8b5
