--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = af492c2
+	base = a277965
 	trimbase = 
 	parent = debian/hydro/task_executor
-	previous = 
+	previous = af492c2
