--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = task_executor
-	base = 16055be
-	trimbase = 
+	base = e2538d3
+	trimbase = 16055be
 	parent = upstream
 	previous = 2f2e14e
