--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
 	base = d193842
-	trimbase = 9b8ef5e
+	trimbase = 
 	parent = upstream
 	previous = 8e448a6
