--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
-	base = 7c0559c
-	trimbase = 
+	base = c52e103
+	trimbase = 7c0559c
 	parent = upstream
 	previous = 2f2e14e
