--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = 28f67c8
-	trimbase = 
+	base = d70fbf5
+	trimbase = 28f67c8
 	parent = upstream
 	previous = 2f2e14e
