--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = 1d34900
-	trimbase = 
+	base = e20dc34
+	trimbase = 1d34900
 	parent = upstream
 	previous = 2f2e14e
