--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = task_executor
-	base = 6d8fb6b
-	trimbase = 
+	base = b86166b
+	trimbase = 6d8fb6b
 	parent = upstream
 	previous = 2f2e14e
