--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
 	base = 52f0e6b
-	trimbase = 4e00505
+	trimbase = 
 	parent = upstream
 	previous = 8e448a6
