--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
-	base = 5aad126
-	trimbase = 
+	base = 5215add
+	trimbase = 5aad126
 	parent = upstream
 	previous = 2f2e14e
