--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = 49acc6c
-	trimbase = 
+	base = 857b534
+	trimbase = 49acc6c
 	parent = upstream
 	previous = 2f2e14e
