--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = ba36aa3
-	trimbase = 
+	base = 9d16946
+	trimbase = ba36aa3
 	parent = upstream
 	previous = 2f2e14e
