--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
-	base = 770d21f
-	trimbase = 
+	base = 48958df
+	trimbase = 770d21f
 	parent = upstream
 	previous = 50a4561
