--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = 4c3192e
-	trimbase = 
+	base = 2911a40
+	trimbase = 4c3192e
 	parent = upstream
 	previous = 50a4561
