--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = a651387
-	trimbase = 
+	base = 6d336e8
+	trimbase = a651387
 	parent = upstream
 	previous = 50a4561
