--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f0cfb13
-	trimbase = 
+	trim = sim_clock
+	base = 1560d7f
+	trimbase = f0cfb13
 	parent = upstream
 	previous = aa741b2
