--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = task_executor
-	base = 67dc606
-	trimbase = 
+	base = 280fee0
+	trimbase = 67dc606
 	parent = upstream
 	previous = aa741b2
