--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = de53cf4
-	trimbase = 
+	trim = wait_action
+	base = 3fb56b4
+	trimbase = de53cf4
 	parent = upstream
 	previous = aa741b2
