--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = 13f572a
-	trimbase = 
+	base = 3a87c2d
+	trimbase = 13f572a
 	parent = upstream
 	previous = aa741b2
