--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = ccf0579
-	trimbase = 
+	base = 16d5ab8
+	trimbase = ccf0579
 	parent = upstream
 	previous = aa741b2
