--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1560d7f
+	base = d454e66
 	trimbase = 
 	parent = release/hydro/sim_clock
-	previous = 
+	previous = 1560d7f
