--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1efc59e
+	base = 9d72596
 	trimbase = 
 	parent = debian/hydro/sim_clock
-	previous = 
+	previous = 1efc59e
