--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3fb56b4
+	base = f785b1b
 	trimbase = 
 	parent = release/hydro/wait_action
-	previous = 
+	previous = 3fb56b4
