--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3eb044f
+	base = 3febad4
 	trimbase = 
 	parent = debian/hydro/wait_action
-	previous = 
+	previous = 3eb044f
