--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sim_clock
-	base = c6f94af
-	trimbase = 
+	base = 46f5aef
+	trimbase = c6f94af
 	parent = upstream
 	previous = 594978b
