--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
-	base = 76bf23b
-	trimbase = 
+	base = eff71c6
+	trimbase = 76bf23b
 	parent = upstream
 	previous = 594978b
