--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
 	base = e5a9559
-	trimbase = 9d69d1a
+	trimbase = 
 	parent = upstream
 	previous = aa741b2
