--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = task_executor
-	base = f08d2ac
-	trimbase = 
+	base = 1c342c5
+	trimbase = f08d2ac
 	parent = upstream
 	previous = 594978b
