--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = wait_action
-	base = 7e9007d
-	trimbase = 
+	base = 62b5c97
+	trimbase = 7e9007d
 	parent = upstream
 	previous = 594978b
