--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = 9e800aa
-	trimbase = 
+	base = 8728ea0
+	trimbase = 9e800aa
 	parent = upstream
 	previous = 594978b
