--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = 26d0a30
-	trimbase = 
+	base = 2498998
+	trimbase = 26d0a30
 	parent = upstream
 	previous = 594978b
