--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sim_clock
-	base = 82f7ec6
-	trimbase = 
+	base = 30b7c15
+	trimbase = 82f7ec6
 	parent = upstream
 	previous = 594978b
