--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = task_executor
-	base = 3f2a890
-	trimbase = 
+	base = 745ea44
+	trimbase = 3f2a890
 	parent = upstream
 	previous = 594978b
