--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = wait_action
-	base = 7a2b0ba
-	trimbase = 
+	base = 2534a38
+	trimbase = 7a2b0ba
 	parent = upstream
 	previous = 594978b
