--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = 523866c
-	trimbase = 
+	base = b8f2be6
+	trimbase = 523866c
 	parent = upstream
 	previous = 594978b
