--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = df3b864
-	trimbase = 
+	base = 5dfebd4
+	trimbase = df3b864
 	parent = upstream
 	previous = 594978b
