--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sim_clock
-	base = 21e45e1
-	trimbase = 
+	base = f85fa30
+	trimbase = 21e45e1
 	parent = upstream
 	previous = 2ee65da
