--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
 	base = b783b71
-	trimbase = 742461e
+	trimbase = 
 	parent = upstream
 	previous = 594978b
