--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = task_executor
-	base = 06bf637
-	trimbase = 
+	base = 7c6f182
+	trimbase = 06bf637
 	parent = upstream
 	previous = 2ee65da
