--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = wait_action
-	base = a30e221
-	trimbase = 
+	base = f0e6ce4
+	trimbase = a30e221
 	parent = upstream
 	previous = 2ee65da
