--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = 3524440
-	trimbase = 
+	base = 5a634b8
+	trimbase = 3524440
 	parent = upstream
 	previous = 2ee65da
