--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = 94b0b8e
-	trimbase = 
+	base = 5d62a37
+	trimbase = 94b0b8e
 	parent = upstream
 	previous = 2ee65da
