--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sim_clock
-	base = c2c9dc4
-	trimbase = 
+	base = 5b89550
+	trimbase = c2c9dc4
 	parent = upstream
 	previous = 3a7d6ce
