--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
 	base = 21ab82c
-	trimbase = 1117375
+	trimbase = 
 	parent = upstream
 	previous = 2ee65da
