--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
-	base = ae83b74
-	trimbase = 
+	base = 0232097
+	trimbase = ae83b74
 	parent = upstream
 	previous = 3a7d6ce
