--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = task_executor
-	base = 37698f7
-	trimbase = 
+	base = 62fd254
+	trimbase = 37698f7
 	parent = upstream
 	previous = 3a7d6ce
