--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = wait_action
-	base = 1080f3d
-	trimbase = 
+	base = ad0412c
+	trimbase = 1080f3d
 	parent = upstream
 	previous = 3a7d6ce
