--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = fdd831b
-	trimbase = 
+	base = 3608c00
+	trimbase = fdd831b
 	parent = upstream
 	previous = 3a7d6ce
