--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = 6248c8e
-	trimbase = 
+	base = d61d8d4
+	trimbase = 6248c8e
 	parent = upstream
 	previous = 3a7d6ce
