--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 19aac83
-	trimbase = 
+	trim = sim_clock
+	base = 99da9f3
+	trimbase = 19aac83
 	parent = upstream
 	previous = f2ab6b0
