--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = strands_executive_msgs
-	base = a3089a4
-	trimbase = 
+	base = a7c8650
+	trimbase = a3089a4
 	parent = upstream
 	previous = f2ab6b0
