--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = task_executor
-	base = aee2804
-	trimbase = 
+	base = f1ac536
+	trimbase = aee2804
 	parent = upstream
 	previous = f2ab6b0
