--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4afc25b
-	trimbase = 
+	trim = wait_action
+	base = 529342f
+	trimbase = 4afc25b
 	parent = upstream
 	previous = f2ab6b0
