--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scheduler
-	base = b99d837
-	trimbase = 
+	base = 271bfb7
+	trimbase = b99d837
 	parent = upstream
 	previous = f2ab6b0
