--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = scipoptsuite
-	base = c002de0
-	trimbase = 
+	base = 888211f
+	trimbase = c002de0
 	parent = upstream
 	previous = f2ab6b0
