--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 99da9f3
+	base = 74795da
 	trimbase = 
 	parent = release/indigo/sim_clock
-	previous = 
+	previous = 99da9f3
