--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c593e28
+	base = b001974
 	trimbase = 
 	parent = debian/indigo/sim_clock
-	previous = 
+	previous = c593e28
