--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 529342f
+	base = 0e9105e
 	trimbase = 
 	parent = release/indigo/wait_action
-	previous = 
+	previous = 529342f
