--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d99200e
+	base = 47caed5
 	trimbase = 
 	parent = debian/indigo/wait_action
-	previous = 
+	previous = d99200e
